# ismailmustafa.github.io

./: .gitignore  .update-site  CNAME  FractalArt.hs  LICENSE  README.md  about.html  about.md  archive.html  blog.cabal  contact.html  contact.markdown  deploy  index.html  projects.html  projects.md  site.hs  stack.yaml
posts/: 2014-10-06-python.html  2014-10-06-python.markdown  2014-10-13-iosVideo.html  2014-10-13-iosVideo.markdown  2014-10-20-delegates.html  2014-10-20-delegates.markdown  2014-10-27-cocoapods.html  2014-10-27-cocoapods.markdown  2014-11-06-hamburgerMenu.html  2014-11-06-hamburgerMenu.markdown  2014-11-17-coremotion.html  2014-11-17-coremotion.markdown  2015-08-23-example.html  2016-01-24-hakyllSetup.html  2016-01-24-hakyllSetup.markdown  2016-01-25-blogPostImages.html  2016-01-25-blogPostImages.markdown
static/css/: spaceg.stylesheets.css
templates/: archive.html  footer.html  head.html  nav.html  page.html  post.html
