name:                blog
version:             0.1.0.0
synopsis:            Hakyll project template from stack
description:         Please see README.md
homepage:            http://github.com/ismailmustafa/blog#readme
license:             BSD3
license-file:        LICENSE
author:              Ismail Mustafa
maintainer:          ismailmustafa@rocketmail.com
copyright:           2015 Ismail Mustafa
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable blog
  main-is:             site.hs
  other-modules:       FractalArt
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base == 4.*,
                       hakyll == 4.7.*,
                       pandoc,
                       filepath,
                       directory,
                       bytestring,
                       split,
                       random,
                       mwc-random,
                       primitive,
                       vector,
                       JuicyPixels
